# pyQuiz

./: README.md  Толмачёв.pptx
client/: app.py  build.py  main.py  models.py  pyproject.toml  requirements.txt  settings.py  src.qrc  src_rc.py  tasks.py
client/api/: __init__.py  answers.py  base.py  quiz.py  user.py
client/dialogs/: __init__.py  account.py  answer.py  answers_view.py  auth.py  editor.py  login.py
client/gui/: __init__.py  main_menu.py  main_menu.ui
client/gui/dialogs/: __init__.py  account.py  account.ui  answer.py  answer.ui  answers_view.py  answers_view.ui  auth.py  auth.ui  editor.py  editor.ui  login.py  login.ui
client/gui/widgets/: __init__.py  form.py  quiz.py  quiz.ui  quiz_widget.py  quiz_widget.ui
client/gui/widgets/answer/: __init__.py  question.py  question.ui
client/gui/widgets/answer/fields/: checkbox.py  checkbox.ui  date.py  date.ui  datetime.py  datetime.ui  float.py  float.ui  integer.py  integer.ui  radio.py  radio.ui  text.py  text.ui  time.py  time.ui
client/gui/widgets/answers_view/: answer.py  answer.ui
client/gui/widgets/editor/: __init__.py  form.py  form.ui  question.py  question.ui
client/gui/widgets/editor/forms/: __init__.py  checkbox.py  checkbox.ui  date.py  date.ui  datetime.py  datetime.ui  float.py  float.ui  integer.py  integer.ui  radio.py  radio.ui  text.py  text.ui  time.py  time.ui
client/widgets/: __init__.py  quiz.py
client/widgets/answer/: __init__.py  question.py
client/widgets/answer/fields/: __init__.py  base.py  checkbox.py  date.py  datetime.py  float_.py  integer.py  radio.py  text.py  time.py
client/widgets/answer_view/: __init__.py  answer.py
client/widgets/editor/: __init__.py  form.py  question.py
client/widgets/editor/forms/: __init__.py  base.py  checkbox.py  date.py  datetime.py  float_.py  integer.py  radio.py  text.py  time.py
client/windows/: __init__.py  main.py
server/: Dockerfile  app.py  config.py  database.py  docker-compose.yaml  env.env.sample  main.py  models.py  pyproject.toml  requirements.txt  settings.py  utils.py
server/endpoints/: __init__.py  answer.py  answers.py  quiz.py  user.py
