[tool.poetry]
name = "pyquizclient"
version = "0.1.0"
description = ""
authors = ["Igor Tolmachov <me@igorek.dev>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
PyQt5 = "^5.15.7"
pydantic = "^1.10.2"
keyring = "^23.9.3"
httpx = "^0.23.0"

[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
black = "^22.10.0"
isort = "^5.10.1"
types-requests = "^2.28.11.2"
PyQt5-stubs = "^5.15.6.0"
types-Pillow = "^9.2.2.2"

[tool.black]
line-length = 90

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "gui.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "src_rc"
disallow_untyped_defs = false

[tool.isort]
profile = "black"
filter_files = true